<resources>
    <string name="app_name">Coding Challenge shopping list</string>
    <string name="shoppinglist">ShoppingList</string>
    <string name="item">Item</string>
    <string name="amount">Amount</string>
    <string name="cheese">Cheese</string>
    <string name="rice">Rice</string>
    <string name="apples">Apples</string>
    <string name="milk">Milk</string>
    <string name="hest">Hest</string>
    <string name="salt">Salt</string>
</resources>